# MemOS-Cloud-CLI

./: .gitignore  Mem0 CLI测试.md  MemOS CLI 需求清单.md  README-zh.md  README.md  memos.spec  package.json  pyproject.toml
.github/workflows/: release.yml  startup-benchmark.yml
npm/: README.md
scripts/: build-binary.ps1  build-binary.sh  postinstall.js  prepublish-check.js
skills/: memory_skill.md
skills/memos-memory/: SKILL.md
skills/memos-memory-agent/: SKILL.md
skills/memos-memory/references/: memos-add.md  memos-chat.md  memos-delete.md  memos-extract.md  memos-get.md  memos-origin.md  memos-search.md  memos-uninstall.md
skills/memos-shared/: SKILL.md
src/memos_cli/: __init__.py  __main__.py  branding.py  config.py  main.py  output.py  state.py  telemetry.py
src/memos_cli/backend/: __init__.py  base.py  kb_api.py  memory_api.py  memos_api.py  message_api.py  normalizers.py  transport.py
src/memos_cli/commands/: __init__.py  config_cmd.py  init.py  kb.py  kb_cmd.py  memory.py  memory_cmd.py  message.py  message_cmd.py
src/memos_cli/templates/: agent_guidance.md
tests/: test_backend_normalization.py  test_cli_integration.py  test_init_guidance_paths.py  test_memory_api.py  test_memory_api_ping.py  test_state.py  test_transport.py  test_transport_tracking.py
