[project]
name = "memos-cli"
version = "1.0.2"
description = "MemOS CLI - Universal memory interface for AI agents"
requires-python = ">=3.10"
license = {text = "See https://github.com/lijicode/MemOS/blob/main/LICENSE"}
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "click>=8.0.0"
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
memos = "memos_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
